--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@ body {
     background-color: #d9dcd6;
 }
 
+/* Changed the header class to a header element */
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -15,16 +16,17 @@ header {
     color: #ffffff;
 }
 
-header h1 {
+h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-header h1 .seo {
+.seo {
     color: #d9dcd6;
 }
 
-header nav {
+/* Changed the div to a nav since it is a navigation bar */
+nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +34,11 @@ header nav {
     font-size: 20px;
 }
 
-header nav ul {
+nav ul {
     list-style-type: none;
 }
 
-header nav ul li {
+nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -50,7 +52,8 @@ p {
     font-size: 16px;
 }
 
-.hero {
+/* Removed the hero class and used figure instead */
+figure {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
@@ -75,6 +78,27 @@ p {
     margin-left: 20px;
 }
 
+/* Consolidated all the separate classes under content into a single section element in order to remove lots of redundant code */
+.content section {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+/* Consolidated all the separate image code into one */
+.content section img {
+    max-height: 200px;
+}
+
+/* Consolidated all the separate h2 header code into one */
+h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -86,38 +110,24 @@ p {
     background-color: #2589bd;
 }
 
-.content-main {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.content-main img {
-    max-height: 200px;
-}
-
-.content-main h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.benefits-main {
+/* Consolidated all the separate classes under benefits into a single section element in order to remove lots of redundant code */
+.benefits section {
     margin-bottom: 32px;
     color: #ffffff;    
 }
- .benefits-main h3 {
-    margin-bottom: 10px;
-    text-align: center;    
- }
 
+/* Consolidated all the separate image code into one */
 .benefits img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
+
+/* Consolidated all the separate h3 header code into one */
+h3 {
+    margin-bottom: 10px;
+    text-align: center;    
+ }
 
 footer {
     padding: 30px;
@@ -126,6 +136,7 @@ footer {
     text-align: center;
 }
 
-footer h2 {
+/* Changed footer header to an h4 header */
+h4 {
     font-size: 20px;
 }
